--- a/page.html
+++ b/page.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Demonstrating JavaScript</title>
-    <!-- BOOTSTRAP (style only)-->
+    <!-- Courtesy BOOTSTRAP (style only): http://getbootstrap.com/getting-started-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+    <!-- getBootstrap.com-->
     <script lang="javascript">
       function sayHello() {
         document.getElementById("hello").innerHTML = "Hiya, buddy!";
